# ee-bench

./: .gitignore  README.md  analyze.py  pyproject.toml  sweep_test.json
ee_bench/: analysis.py  cli.py  config.py  graphs.py  runner.py
ee_bench/environments/: __init__.py  bandit.py  base.py  search.py
ee_bench/environments/bandits/: __init__.py  casino_slot_machines.py  clinical_trial.py  ocean_fishing.py  restaurant_picker.py  venture_capitalist.py
ee_bench/environments/search/: __init__.py  alchemy_lab.py  radio_tuner.py  treasure_hunter.py
ee_bench/metrics/: __init__.py  core.py
ee_bench/prompts/: __init__.py  alchemy_lab.md  casino_slot_machines.md  clinical_trial.md  loader.py  ocean_fishing.md  radio_tuner.md  restaurant_picker.md  treasure_hunter.md  venture_capitalist.md
ee_bench/providers/: __init__.py  openrouter.py
results/sweep_20260403_013440/: results.json
results/test_run/: analysis.txt  sweep.json
sweeps/: sweep_example.json  sweep_overnight.json
