[project]
name = "ee-bench"
version = "0.1.0"
description = "Explore/Exploit Benchmark for LLMs"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "numpy>=1.26",
    "pydantic>=2.0",
    "rich>=13.0",
]

[project.optional-dependencies]
analysis = [
    "matplotlib>=3.8",
    "pandas>=2.1",
    "scipy>=1.12",
]

[project.scripts]
ee-bench = "ee_bench.cli:main"
